// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`repeat '' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "'a'",
  ],
  "pos": 0,
}
`;

exports[`repeat 'a' conditional success tests AST matches snapshot 1`] = `
[
  "a",
]
`;

exports[`repeat 'aa' conditional success tests AST matches snapshot 1`] = `
[
  "a",
  "a",
]
`;

exports[`repeat 'aaa' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "eof",
  ],
  "pos": 2,
}
`;

exports[`repeat 'abaa' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "'a'",
    "eof",
  ],
  "pos": 1,
}
`;
